Splash screen, slideshow amends

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
 @import './components/header.css';
 @import './components/footer.css';
 @import './components/modal.css';
-/* @import './components/splash.css'; */
+@import './components/splash.css';
 
 /* Reset and base styles */
 * {
