--- a/src/styles/pages/about.css
+++ b/src/styles/pages/about.css
@@ -1,13 +1,14 @@
 .about {
-  max-width: 800px;
+  padding: 4rem 0;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 2rem 1rem;
 }
 
 .about-title {
-  font-size: 2.5rem;
   text-align: center;
-  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  margin-bottom: 3rem;
+  font-weight: bold;
 }
 
 .about-subtitle {
@@ -16,6 +17,9 @@
   text-align: center;
 }
 
+.about-content {
+  text-align: center;
+}
 .artwork-section {
   margin-bottom: 3rem;
 }
